--- a/sites/iolaregister.etypegoogle8.com/themes/iolaregister/css/iolaregister.css
+++ b/sites/iolaregister.etypegoogle8.com/themes/iolaregister/css/iolaregister.css
@@ -26,9 +26,9 @@
   float: right; }
 
 /* advanced poll */
-#block-advpoll-advpoll-recent {
+#main-content #block-advpoll-advpoll-recent {
   background-color: #EAEAE8; }
-  #block-advpoll-advpoll-recent .block-inner {
+  #main-content #block-advpoll-advpoll-recent .block-inner {
     background: none;
     border: none; }
 
