--- a/sites/iolaregister.etypegoogle8.com/themes/iolaregister/iolaregister.scss
+++ b/sites/iolaregister.etypegoogle8.com/themes/iolaregister/iolaregister.scss
@@ -31,10 +31,12 @@
 }
 
 /* advanced poll */
-#block-advpoll-advpoll-recent {
-  background-color: #EAEAE8;
-  .block-inner {
-    background: none;
-    border: none;
-  }
+#main-content {
+   #block-advpoll-advpoll-recent {
+     background-color: #EAEAE8;
+     .block-inner {
+       background: none;
+       border: none;
+     }
+   }
 }
