--- a/sites/iolaregister.etypegoogle8.com/themes/iolaregister/css/iolaregister.css
+++ b/sites/iolaregister.etypegoogle8.com/themes/iolaregister/css/iolaregister.css
@@ -29,7 +29,6 @@
 #main-content #block-advpoll-advpoll-recent {
   background-color: #EAEAE8; }
   #main-content #block-advpoll-advpoll-recent .block-inner {
-    background: none;
-    border: none; }
+    background: none; }
 
 /*# sourceMappingURL=iolaregister.css.map */
