--- a/sites/all/themes/fredtwentytwo/css/screen-layout.css
+++ b/sites/all/themes/fredtwentytwo/css/screen-layout.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:600,300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:600,300,400,700);
 
 body {
     /*background: url("../images/body.png") repeat-x #CBCBCB;*/
