iola obituaries in local menu

--- a/sites/iolaregister.etypegoogle8.com/themes/iolaregister/css/iolaregister.css
+++ b/sites/iolaregister.etypegoogle8.com/themes/iolaregister/css/iolaregister.css
@@ -4,7 +4,7 @@
 
 @media only screen and (max-width: 767px) {
   /* mobile-menu options */
-  #menu-2301-1, #menu-3392-1, #menu-3393-1, #menu-3394-1, #menu-3401-1, #menu-2301-1 #menu-3580-1, #menu-3581-1, #menu-3582-1, #menu-3387-1, #menu-699-1, #menu-2424-1, #menu-3400-1, #menu-2298-1, #menu-3400-1, #menu-3388-1 {
+  #menu-2301-1, #menu-3392-1, #menu-3393-1, #menu-3394-1, #menu-3401-1, #menu-2301-1 #menu-3580-1, #menu-3581-1, #menu-3582-1, #menu-3387-1, #menu-699-1, #menu-3400-1, #menu-2298-1, #menu-3400-1, #menu-3388-1 {
     display: none;
     visibility: hidden; }
 
