iola simple ad blocks

--- a/sites/iolaregister.etypegoogle8.com/themes/iolaregister/iolaregister.scss
+++ b/sites/iolaregister.etypegoogle8.com/themes/iolaregister/iolaregister.scss
@@ -15,7 +15,8 @@
   #block-simpleads-ad-groups-415,
   #block-simpleads-ad-groups-416,
   #block-simpleads-ad-groups-417,
-  #block-simpleads-ad-groups-437 {
+  #block-simpleads-ad-groups-437,
+  #block-simpleads-ad-groups-418 {
     display: none;
     visibility: hidden;
   }
@@ -24,7 +25,8 @@
   #block-simpleads-ad-groups-5623,
   #block-simpleads-ad-groups-5624,
   #block-simpleads-ad-groups-5625,
-  #block-simpleads-ad-groups-5626 {
+  #block-simpleads-ad-groups-5626,
+  #block-simpleads-ad-groups-5627 {
     display: block;
     visibility: visible;
   }
@@ -37,7 +39,8 @@
   #block-simpleads-ad-groups-415,
   #block-simpleads-ad-groups-416,
   #block-simpleads-ad-groups-417,
-  #block-simpleads-ad-groups-437 {
+  #block-simpleads-ad-groups-437,
+  #block-simpleads-ad-groups-418 {
     display: block;
     visibility: visible;
   }
@@ -46,7 +49,8 @@
   #block-simpleads-ad-groups-5623,
   #block-simpleads-ad-groups-5624,
   #block-simpleads-ad-groups-5625,
-  #block-simpleads-ad-groups-5626 {
+  #block-simpleads-ad-groups-5626,
+  #block-simpleads-ad-groups-5627 {
     display: none;
     visibility: hidden;
   }
