--- a/sites/iolaregister.etypegoogle8.com/themes/iolaregister/css/iolaregister.css
+++ b/sites/iolaregister.etypegoogle8.com/themes/iolaregister/css/iolaregister.css
@@ -12,7 +12,8 @@
   #block-simpleads-ad-groups-415,
   #block-simpleads-ad-groups-416,
   #block-simpleads-ad-groups-417,
-  #block-simpleads-ad-groups-437 {
+  #block-simpleads-ad-groups-437,
+  #block-simpleads-ad-groups-418 {
     display: none;
     visibility: hidden; }
 
@@ -20,7 +21,8 @@
   #block-simpleads-ad-groups-5623,
   #block-simpleads-ad-groups-5624,
   #block-simpleads-ad-groups-5625,
-  #block-simpleads-ad-groups-5626 {
+  #block-simpleads-ad-groups-5626,
+  #block-simpleads-ad-groups-5627 {
     display: block;
     visibility: visible; } }
 @media only screen and (min-width: 768px) {
@@ -28,7 +30,8 @@
   #block-simpleads-ad-groups-415,
   #block-simpleads-ad-groups-416,
   #block-simpleads-ad-groups-417,
-  #block-simpleads-ad-groups-437 {
+  #block-simpleads-ad-groups-437,
+  #block-simpleads-ad-groups-418 {
     display: block;
     visibility: visible; }
 
@@ -36,7 +39,8 @@
   #block-simpleads-ad-groups-5623,
   #block-simpleads-ad-groups-5624,
   #block-simpleads-ad-groups-5625,
-  #block-simpleads-ad-groups-5626 {
+  #block-simpleads-ad-groups-5626,
+  #block-simpleads-ad-groups-5627 {
     display: none;
     visibility: hidden; } }
 /* customer requests to change bg color and increase font sizes */
