iola simple ad blocks

--- a/sites/iolaregister.etypegoogle8.com/themes/iolaregister/iolaregister.scss
+++ b/sites/iolaregister.etypegoogle8.com/themes/iolaregister/iolaregister.scss
@@ -50,7 +50,7 @@
   #block-simpleads-ad-groups-5624,
   #block-simpleads-ad-groups-5625,
   #block-simpleads-ad-groups-5626,
-  {
+  #block-simpleads-ad-groups-5627 {
     display: none;
     visibility: hidden;
   }
