iola simple ad blocks

--- a/sites/iolaregister.etypegoogle8.com/themes/iolaregister/iolaregister.scss
+++ b/sites/iolaregister.etypegoogle8.com/themes/iolaregister/iolaregister.scss
@@ -45,7 +45,7 @@
     visibility: visible;
   }
 
-  /* mobile ad blocks */
+  /* mobile ad blocks to hide at wider widths */
   #block-simpleads-ad-groups-5623,
   #block-simpleads-ad-groups-5624,
   #block-simpleads-ad-groups-5625,
