--- a/sites/iolaregister.etypegoogle8.com/themes/iolaregister/css/iolaregister.css
+++ b/sites/iolaregister.etypegoogle8.com/themes/iolaregister/css/iolaregister.css
@@ -35,7 +35,7 @@
     display: block;
     visibility: visible; }
 
-  /* mobile ad blocks */
+  /* mobile ad blocks to hide at wider widths */
   #block-simpleads-ad-groups-5623,
   #block-simpleads-ad-groups-5624,
   #block-simpleads-ad-groups-5625,
