--- a/sites/sequoyahcountytimes.etypegoogle8.com/local.css
+++ b/sites/sequoyahcountytimes.etypegoogle8.com/local.css
@@ -22,6 +22,11 @@ body {
   padding: 0;
   border: none;
 }
+
+#block-block-39 .block-inner {
+  margin-bottom: 0;
+}
+
 @media only screen and (min-width: 959px) {
   .postscript-wrapper {
     margin-right: 0;
