--- a/sites/plaqueminesgazette.com/themes/masthead/css/style1.css
+++ b/sites/plaqueminesgazette.com/themes/masthead/css/style1.css
@@ -977,3 +977,10 @@ ul.quicktabs-tabs.quicktabs-style-nostyle li.active a {
 .view-slideshow .views-slideshow-controls-bottom .views-field-field-image img {
     margin: 0;
 }
+
+/* ads */
+#block-block-24 .block-inner {
+    padding: 0;
+    border: none;
+    box-shadow: none;
+}
