--- a/sites/thestbernardvoice.com/themes/masthead/css/style1.css
+++ b/sites/thestbernardvoice.com/themes/masthead/css/style1.css
@@ -986,3 +986,9 @@ ul.quicktabs-tabs.quicktabs-style-nostyle li.active a {
     background: #ffffff;
     box-shadow: none;
 }
+
+/* ads */
+.sidebar_ad {
+    border: none;
+    box-shadow: none;
+}
