--- a/sites/thestbernardvoice.com/themes/masthead/css/style1.css
+++ b/sites/thestbernardvoice.com/themes/masthead/css/style1.css
@@ -988,7 +988,7 @@ ul.quicktabs-tabs.quicktabs-style-nostyle li.active a {
 }
 
 /* ads */
-.sidebar_ad {
+.sidebar_ad .block-inner {
     border: none;
     box-shadow: none;
 }
