--- a/sites/plaqueminesgazette.com/themes/masthead/css/style1.css
+++ b/sites/plaqueminesgazette.com/themes/masthead/css/style1.css
@@ -979,7 +979,8 @@ ul.quicktabs-tabs.quicktabs-style-nostyle li.active a {
 }
 
 /* ads */
-.sidebar_ad .block-inner {
+#main-content .sidebar_ad .block-inner {
     border: none;
     box-shadow: none;
+    padding: 0;
 }
