best of wimberley tab

--- a/sites/wimberleyview.etypegoogle9.com/local.css
+++ b/sites/wimberleyview.etypegoogle9.com/local.css
@@ -1,8 +1,7 @@
-/* toy insider */
-#menu-3743-1 {
-    background: #19B049!important;
+#menu-4350-1 {
+    background: #ffcc00!important;
 }
 
-#menu-3743-1 a.active {
-    background: #19B049!important;
+#menu-4350-1 a {
+    color: #000066!important;
 }
