dripping springs menu item

--- a/sites/drippingspringsnews.etypegoogle9.com/local.css
+++ b/sites/drippingspringsnews.etypegoogle9.com/local.css
@@ -10,11 +10,10 @@ body, #main-menu ul.menu, #user-menu {
     font-family: "Roboto", sans-serif;
 }
 
-/* toy insider */
-#menu-3991-1 {
-    background: #19B049!important;
+#menu-4429-1 {
+    background: ##ffcc00!important;
 }
 
-#menu-3991-1 a.active {
-    background: #19B049!important;
+#menu-4429-1 a.active {
+    background: #000066!important;
 }
