dripping springs menu item

--- a/sites/drippingspringsnews.etypegoogle9.com/local.css
+++ b/sites/drippingspringsnews.etypegoogle9.com/local.css
@@ -11,7 +11,7 @@ body, #main-menu ul.menu, #user-menu {
 }
 
 #menu-4429-1 {
-    background: ##ffcc00!important;
+    background: #ffcc00!important;
 }
 
 #menu-4429-1 a.active {
